fix: fix toggle and slider xt-grab and xt-jump on activation deactivation

--- a/static/demos/components/slider/touch-overflow.css
+++ b/static/demos/components/slider/touch-overflow.css
@@ -6,7 +6,6 @@
       overflow-y: hidden !important;
     }
     .xt-slides-inner {
-      cursor: auto !important;
       transform: none !important;
       transition: none !important;
     }
